# notes_app

./: Cargo.toml  README.md
data/: notes.json
src/: lib.rs  main.rs  models.rs  storage.rs  web.rs
static/: index.html
